<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">GBCC</string>
    <string name="application_id">com.philj56.gbcc</string>
    <string name="launch_game_intent">com.philj56.gbcc.launch_game</string>
    <string name="base_directory_name">Files</string>
    <string name="import_rom">Import</string>
    <string name="settings">Settings</string>
    <string name="create_folder">Create folder</string>
    <string name="create_folder_hint">Folder name</string>
    <string name="export_saves">Export saves</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="searching">Searching…</string>
    <string name="manage_files">Manage files</string>
    <string name="rename_directory">Rename directory</string>
    <string name="rename_rom">Rename ROM</string>
    <string name="select_items">Select files</string>
    <string name="select_destination">Select destination</string>
    <string name="delete">Delete</string>
    <plurals name="delete_confirmation">
        <item quantity="one">Are you sure you wish to delete this item?</item>
        <item quantity="other">Are you sure you wish to delete these %d items?</item>
    </plurals>
    <string name="select_action">Select action</string>
    <string name="delete_save">Delete save</string>
    <plurals name="delete_save_confirmation">
        <item quantity="one">Are you sure you wish to delete your saves for this game?</item>
        <item quantity="other">Are you sure you wish to delete your saves for these %d games?</item>
    </plurals>
    <string name="delete_config_confirmation">Are you sure you wish to delete your config for this game?</string>
    <string name="edit_config">Edit game config</string>
    <string name="edit_cheats">Edit cheats</string>
    <string name="add_shortcut">Add shortcut</string>
    <string name="move">Move</string>
    <string name="overwrite_confirmation">Select save files to overwrite:</string>
    <string name="error_zip_title">Error parsing zip file: <xliff:g>%1$s</xliff:g></string>
    <string name="error_zip_body">This could be caused by trying to import a zip file with an encoding other than UTF-8. If possible, recreate the zip with UTF-8 encoding.</string>
    <string name="screen_description">Screen</string>
    <string name="a_button_description">A</string>
    <string name="b_button_description">B</string>
    <string name="dpad_description">Dpad</string>
    <string name="start_button_description">Start</string>
    <string name="select_button_description">Select</string>
    <string name="printer_button_description">Printer</string>
    <string name="gameboy_button_description">Game Boy</string>
    <string name="printer_save_button_description">Save printer output</string>
    <string name="printer_clear_button_description">Clear printer output</string>
    <string name="quit_confirmation">Are you sure you want to quit?</string>
    <string name="invalid_opcode_title">Invalid Opcode</string>
    <string name="invalid_opcode_description">GBCC has encountered an error, and will now stop. This could either be due to an error in the ROM you were trying to run, or a bug in GBCC. To see a more detailed report or report this issue, press \"Send feedback\".</string>
    <string name="button_send_feedback">Send feedback</string>
    <string name="button_quit">Quit</string>
    <string name="button_reboot">Reboot</string>
    <string name="rom_config_title">Rom config</string>
    <string name="rom_config_palette">Palette</string>
    <string name="rom_config_shader">Shader</string>
    <string name="rom_config_delete">Delete config</string>
    <string name="cheat_title">Cheats</string>
    <string name="cheat_add_description">Add cheat</string>
    <string name="cheat_edit_description">Edit cheat</string>
    <string name="cheat_delete_description">Delete cheat</string>
    <string name="cheat_description_hint">Description</string>
    <string name="cheat_code_hint">Code (8 or 9 characters)</string>
    <string name="settings_title">Settings</string>
    <string name="settings_category_behaviour">Behaviour</string>
    <string name="settings_category_behaviour_summary">General emulator behaviour: auto-resume, vibration, gamepad mapping etc.</string>
    <string name="settings_category_graphics">Graphics</string>
    <string name="settings_category_graphics_summary">How the emulated Game Boy screen looks</string>
    <string name="settings_category_display">Display</string>
    <string name="settings_category_display_summary">Which controls to show, Game Boy style and layout</string>
    <string name="settings_category_audio">Audio</string>
    <string name="settings_category_audio_summary">Audio latency and volume</string>
    <string name="settings_category_miscellaneous">Miscellaneous</string>
    <string name="settings_category_miscellaneous_summary">App appearance, uncommon settings and licenses</string>
    <string name="settings_animate_buttons">Animate button presses</string>
    <string name="settings_auto_resume">Auto-resume</string>
    <string name="settings_auto_resume_summary">Resume games from where you left off</string>
    <string name="settings_auto_save">Auto-save</string>
    <string name="settings_auto_save_summary">Save whenever a game writes to SRAM</string>
    <string name="settings_back_prompt">Prompt on exit</string>
    <string name="settings_back_prompt_summary">Display a confirmation dialog with a reboot option when leaving a game</string>
    <string name="settings_fps">Show FPS counter</string>
    <string name="settings_frame_blend">Frame-blending</string>
    <string name="settings_frame_blend_summary">Blend consecutive frames together similarly to a real console</string>
    <string name="settings_interlacing">Interlacing</string>
    <string name="settings_interlacing_summary">Draw alternate lines darker similarly to a real console (enabling without frame-blending may lead to flickering)</string>
    <string name="settings_turbo_dpad">Dpad turbo control</string>
    <string name="settings_turbo_dpad_summary">Double-tap the center of the Dpad to toggle turbo</string>
    <string name="settings_turbo_speed">Turbo limit</string>
    <string name="settings_turbo_toggle">Show turbo toggle</string>
    <string name="settings_vsync">Vsync</string>
    <string name="settings_vsync_summary">Try to sync emulator speed to video refresh rate rather than audio</string>
    <string name="settings_shader_gbc">GBC shader</string>
    <string name="settings_shader_dmg">DMG shader</string>
    <string name="settings_shader_nothing">Nothing</string>
    <string name="settings_shader_color_correct">Colour correct</string>
    <string name="settings_shader_subpixel">Subpixel</string>
    <string name="settings_shader_dot_matrix">Dot matrix</string>
    <string name="settings_orientation">Screen orientation</string>
    <string name="settings_orientation_system">System</string>
    <string name="settings_orientation_portrait">Portrait</string>
    <string name="settings_orientation_landscape_auto">Landscape (auto)</string>
    <string name="settings_orientation_landscape_left">Landscape (left)</string>
    <string name="settings_orientation_landscape_right">Landscape (right)</string>
    <string name="settings_skin">Device skin</string>
    <string name="settings_skin_auto">Auto</string>
    <string name="settings_skin_dmg">DMG</string>
    <string name="settings_skin_gbc">GBC</string>
    <string name="settings_palette">DMG palette</string>
    <string name="settings_dmg_color">DMG colour</string>
    <string name="settings_dmg_color_light">Light</string>
    <string name="settings_dmg_color_dark">Dark</string>
    <string name="settings_color">GBC colour</string>
    <string name="settings_color_berry">Berry</string>
    <string name="settings_color_dandelion">Dandelion</string>
    <string name="settings_color_grape">Grape</string>
    <string name="settings_color_kiwi">Kiwi</string>
    <string name="settings_color_teal">Teal</string>
    <string name="settings_audio_volume">Volume</string>
    <string name="settings_audio_printer_volume">Printer volume</string>
    <string name="settings_audio_background_music">Allow background music</string>
    <string name="settings_audio_background_music_summary">If enabled, music from other apps will keep playing when launching a game</string>
    <string name="settings_audio_low_latency">Use low-latency audio path</string>
    <string name="settings_audio_low_latency_summary">Try disabling this if you have audio problems</string>
    <string name="settings_audio_latency">Audio latency</string>
    <string name="settings_audio_latency_summary">Increased latency reduces stuttering</string>
    <string name="settings_audio_latency_units">\u00A0ms</string>
    <string name="settings_bluetooth_latency">Bluetooth audio latency</string>
    <string name="settings_bluetooth_latency_summary">Increased latency reduces stuttering</string>
    <string name="settings_bluetooth_latency_units">\u00A0ms</string>
    <string name="settings_theme">App colour theme</string>
    <string name="settings_night_mode">Night mode</string>
    <string name="settings_night_mode_system">System</string>
    <string name="settings_night_mode_on">On</string>
    <string name="settings_night_mode_off">Off</string>
    <string name="settings_oled_night_mode">OLED night mode</string>
    <string name="settings_oled_night_mode_summary">Use a pure black background in night mode</string>
    <string name="settings_camera">Default camera</string>
    <string name="settings_camera_back">Back</string>
    <string name="settings_camera_front">Front</string>
    <string name="settings_animate_printer">Animate printer</string>
    <string name="settings_animate_printer_summary">Disabling this may cause printing issues</string>
    <string name="settings_arrange">Rearrange layout</string>
    <string name="settings_grid_snap">Snap layout to grid</string>
    <string name="settings_licenses">Licenses</string>
    <string name="settings_haptic_key_press">Vibrate on button press</string>
    <string name="settings_haptic_key_release">Vibrate on button release</string>
    <string name="settings_rumble_strength">Rumble pak strength</string>
    <string name="settings_remap">Remap gamepad</string>
    <string name="settings_additional_mappings">Additional button mappings</string>
    <string name="settings_additional_mappings_summary">Necessary for non-gamepad devices such as keyboards</string>
    <string name="size_title">Button sizes</string>
    <string name="a_b_size">A &amp; B</string>
    <string name="start_select_size">Start &amp; Select</string>
    <string name="dpad_size">Dpad</string>
    <string name="reset_sizes">Reset sizes</string>
    <string name="reset_layout">Reset layout</string>
    <string name="controller_description">Controller layout</string>
    <string name="key_description_a">A</string>
    <string name="key_description_b">B</string>
    <string name="key_description_start">Start</string>
    <string name="key_description_select">Select</string>
    <string name="key_description_up">Up</string>
    <string name="key_description_down">Down</string>
    <string name="key_description_left">Left</string>
    <string name="key_description_right">Right</string>
    <string name="key_description_turbo">Turbo</string>
    <string name="key_description_pause">Pause</string>
    <string name="key_description_printer">Printer</string>
    <string name="key_description_fps">Show FPS</string>
    <string name="key_description_frame_blending">Frameblend</string>
    <string name="key_description_vsync">Vsync</string>
    <string name="key_description_link_cable">Link cable</string>
    <string name="key_description_autosave">Autosave</string>
    <string name="key_description_menu">Menu</string>
    <string name="key_description_interlace">Interlace</string>
</resources>