<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="0dp">

    <SwitchPreference
        app:defaultValue="true"
        app:iconSpaceReserved="false"
        app:key="auto_resume"
        app:title="@string/settings_auto_resume"
        app:summary="@string/settings_auto_resume_summary" />

    <SwitchPreference
        app:defaultValue="false"
        app:iconSpaceReserved="false"
        app:key="auto_save"
        app:title="@string/settings_auto_save"
        app:summary="@string/settings_auto_save_summary" />

    <SwitchPreference
        app:defaultValue="true"
        app:iconSpaceReserved="false"
        app:key="frame_blend"
        app:title="@string/settings_frame_blend" />

    <com.philj56.gbcc.TurboPreference
        app:defaultValue="0"
        app:iconSpaceReserved="false"
        app:key="turbo_speed"
        app:title="@string/settings_turbo_speed" />

    <SwitchPreference
        app:defaultValue="true"
        app:iconSpaceReserved="false"
        app:key="vsync"
        app:title="@string/settings_vsync" />

    <SwitchPreference
        app:defaultValue="false"
        app:iconSpaceReserved="false"
        app:key="interlacing"
        app:title="@string/settings_interlacing" />

    <SwitchPreference
        app:defaultValue="false"
        app:iconSpaceReserved="false"
        app:key="show_fps"
        app:title="@string/settings_fps" />

    <com.philj56.gbcc.SummaryListPreference
        app:defaultValue="@string/settings_shader_dot_matrix"
        app:entries="@array/shader_names_array"
        app:entryValues="@array/shader_values_array"
        app:key="shader_dmg"
        app:title="@string/settings_shader_dmg"
        app:iconSpaceReserved="false" />

    <com.philj56.gbcc.SummaryListPreference
        app:defaultValue="@string/settings_shader_subpixel"
        app:entries="@array/shader_names_array"
        app:entryValues="@array/shader_values_array"
        app:key="shader_gbc"
        app:title="@string/settings_shader_gbc"
        app:iconSpaceReserved="false" />

    <com.philj56.gbcc.SummaryListPreference
        app:defaultValue="-1"
        app:entries="@array/orientation_names_array"
        app:entryValues="@array/orientation_values_array"
        app:key="orientation"
        app:title="@string/settings_orientation"
        app:iconSpaceReserved="false" />

    <com.philj56.gbcc.SummaryListPreference
        app:defaultValue="auto"
        app:entries="@array/skin_names_array"
        app:entryValues="@array/skin_values_array"
        app:key="skin"
        app:title="@string/settings_skin"
        app:iconSpaceReserved="false" />

    <com.philj56.gbcc.SummaryListPreference
        app:defaultValue="Default"
        app:entries="@array/dmg_palettes_array"
        app:entryValues="@array/dmg_palettes_array"
        app:key="palette"
        app:title="@string/settings_palette"
        app:iconSpaceReserved="false" />

    <com.philj56.gbcc.SummaryListPreference
        app:defaultValue="Teal"
        app:entries="@array/color_names_array"
        app:entryValues="@array/color_values_array"
        app:key="color"
        app:title="@string/settings_color"
        app:iconSpaceReserved="false" />

    <com.philj56.gbcc.SummaryListPreference
        app:defaultValue="auto"
        app:entries="@array/night_mode_names_array"
        app:entryValues="@array/night_mode_values_array"
        app:key="night_mode"
        app:title="@string/settings_night_mode"
        app:iconSpaceReserved="false" />

    <Preference
        app:key="arrange"
        app:title="@string/settings_arrange"
        app:iconSpaceReserved="false">
        <intent
            android:targetPackage="com.philj56.gbcc"
            android:targetClass="com.philj56.gbcc.ArrangeActivity" />
    </Preference>

    <Preference
        app:key="licenses"
        app:title="@string/settings_licenses"
        app:iconSpaceReserved="false">
        <intent
            android:targetPackage="com.philj56.gbcc"
            android:targetClass="com.philj56.gbcc.LicenseListActivity" />
    </Preference>
</PreferenceScreen>
