<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        app:defaultValue="true"
        app:iconSpaceReserved="false"
        app:key="frame_blend"
        app:title="@string/settings_frame_blend"
        app:summary="@string/settings_frame_blend_summary"/>

    <SwitchPreferenceCompat
        app:defaultValue="false"
        app:iconSpaceReserved="false"
        app:key="interlacing"
        app:title="@string/settings_interlacing"
        app:summary="@string/settings_interlacing_summary"/>

    <SwitchPreferenceCompat
        app:defaultValue="true"
        app:iconSpaceReserved="false"
        app:key="vsync"
        app:title="@string/settings_vsync"
        app:summary="@string/settings_vsync_summary"/>

    <com.philj56.gbcc.settings.SummaryListPreference
        app:defaultValue="Dot Matrix"
        app:entries="@array/shader_names_array"
        app:entryValues="@array/shader_values_array"
        app:key="shader_dmg"
        app:title="@string/settings_shader_dmg"
        app:iconSpaceReserved="false" />

    <com.philj56.gbcc.settings.SummaryListPreference
        app:defaultValue="Subpixel"
        app:entries="@array/shader_names_array"
        app:entryValues="@array/shader_values_array"
        app:key="shader_gbc"
        app:title="@string/settings_shader_gbc"
        app:iconSpaceReserved="false" />

    <com.philj56.gbcc.settings.SummaryListPreference
        app:defaultValue="Default"
        app:entries="@array/dmg_palettes_array"
        app:entryValues="@array/dmg_palettes_array"
        app:key="palette"
        app:title="@string/settings_palette"
        app:iconSpaceReserved="false" />

</PreferenceScreen>