<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/importItem"
        android:icon="@drawable/ic_library_add_24dp"
        android:title="@string/import_rom"
        app:maxButtonHeight="?attr/actionBarSize"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/folderItem"
        android:icon="@drawable/ic_folder_plus_24dp"
        android:title="@string/create_folder"
        app:maxButtonHeight="?attr/actionBarSize"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/exportItem"
        android:icon="@drawable/ic_save_move_24dp"
        android:title="@string/export_saves"
        app:maxButtonHeight="?attr/actionBarSize"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/settingsItem"
        android:icon="@drawable/ic_settings_24dp"
        android:title="@string/settings"
        app:maxButtonHeight="?attr/actionBarSize"
        app:showAsAction="always" />
</menu>